fixing some sizes to fix responsiveness on iphone and ipad

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -5,14 +5,14 @@
 }
 
 body {
-  margin: 0;
   padding: 0;
-  width: 100vw;
-  height: 100vh;
+  // width: 100vw;
+  // height: 100vh;
 
   #root {
-    width: 100vw;
-    height: 100vh;
+    margin-top: 5rem;
+    // width: 100vw;
+    // height: 100vh;
   }
 }
 .topSection {
@@ -21,6 +21,7 @@ body {
   width: 100vw;
   display: flex;
   justify-content: center;
+  margin-bottom: 40rem;
 }
 .alone {
   width: 80%;
@@ -69,8 +70,9 @@ body {
   align-items: center;
 }
 .community {
-  width: 60vh;
-  height: 60vh;
+  width: 40rem;
+  height: 40rem;
+
   margin: 0 auto;
   object-fit: cover;
   // animation: donut-rotate 1500ms linear infinite;
@@ -82,7 +84,6 @@ body {
   left: 20%;
   top: -15%;
   transform: rotate(-80deg);
-
   // animation: clockwise 1500ms  linear infinite;
 }
 .bottomImages {
@@ -92,10 +93,23 @@ body {
   display: flex;
   justify-content: center;
 }
+@media (min-width: 3000px) {
+  .topSection {
+    margin-bottom: 70rem;
+  }
+}
+@media (max-width: 1000px) {
+  .topSection {
+    margin-bottom: 30rem;
+  }
+}
 @media (max-width: 720px) {
+  .topSection {
+    margin-bottom: 25rem;
+  }
   .community {
-    width: 50vh;
-    height: 50vh;
+    width: 30rem;
+    height: 30rem;
   }
 }
 @media (max-width: 600px) {
@@ -114,14 +128,23 @@ body {
     margin: 0;
   }
   .community {
-    width: 60vh;
-    height: 60vh;
+    width: 340px;
+    height: 340px;
+  }
+  .textInsideDiamond {
+    gap: 1vh;
   }
 }
 @media (max-width: 350px) {
   .diamond {
     width: 190px;
     height: 190px;
+  }
+}
+@media (min-height: 1000px)  and(max-width: 1000px){
+  .community {
+    width: 30rem;
+    height: 30rem;
   }
 }
 
